fix(): white screen on mobile

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -304,10 +304,6 @@ p>img, .mobile {
     display: none;
   }
 
-  .author-template .fix img {
-    display: none;
-  }
-
   .cas {
     display: none;
   }
